kubernetes-manifests/argo-cd/01-argocd-namespace.yml
# 01-argocd-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
