kubernetes-manifests/argo-cd/02-argocd-ingress.yml
# 02-argocd-ingress.yml
#
# --- VERSION 5 (SSL Passthrough) ---
#
# Abandonamos o HTTP. Estamos usando o "SSL Passthrough".
# O Ingress Nginx vai pegar o tráfego HTTPS (porta 443)
# e passá-lo DIRETAMENTE para o backend HTTPS do Argo
# sem tentar decodificá-lo.
#
# ISSO VAI GERAR UM AVISO DE CERTIFICADO NO NAVEGADOR.
# Você DEVE aceitar o risco para continuar.
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    # --- FIX ---
    # Diga ao Nginx para habilitar o "passthrough"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # Não precisamos mais das outras anotações de http/grpc
spec:
  ingressClassName: nginx
  rules:
  - host: argo.172.20.1.60.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              # Deve apontar para a porta HTTPS do backend
              name: https
  # --- FIX ---
  # Precisamos de uma seção 'tls' para dizer ao Nginx
  # para ouvir neste host na porta 443.
  tls:
  - hosts:
    - argo.172.20.1.60.nip.io
    # O Ingress ignora este segredo no modo passthrough,
    # mas a entrada é necessária para habilitar o TLS no Ingress.
    # Usamos o nome do segredo que o próprio ArgoCD cria.
    secretName: argocd-server-tls
